--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <p class="vibe-text">
             Vibe coding is an AI-dependent computer programming practice where a programmer describes a problem in a few sentences as a prompt to a large language model tuned for coding. Software can be quickly created and debugged while ignoring the details of the generated code. Vibe coding is claimed by its advocates to allow even amateur programmers to produce software without the extensive training and skills which coding previously needed. The term was introduced by Andrej Karpathy in February 2025.
         </p>
+
+        <p class="tools-text">
+            Tools for vibe coding: Vibe coding relies on AI tools such as Replit Agent, Cursor Composer, Pythagora, Bolt, Lovable, and Cline, that build on large language models from companies including OpenAI or Anthropic.
+        </p>
     </div>
 </body>
 </html>
